request-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: request-keycloak-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "http://10.239.160.38:30321/realms/istio"
    jwksUri: "http://10.239.160.38:30321/realms/istio/protocol/openid-connect/certs"
