ext-authz-oauth2-proxy.new.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: oauth2-proxy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
    - to:
        - operation:
            paths: ["/headers"]
            #hosts: ["httpbin.foo.svc.cluster.local"]
            notPaths: ["/realms/*"]
